--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -5,7 +5,7 @@ steps:
   CloneServices:
     title: Clone Services Repo
     type: git-clone
-    repo: olegsu/openc-services
+    repo: open-integration/service-catalog
     git: cf_github
     revision: ${{CF_REVISION}}
 
@@ -20,21 +20,6 @@ steps:
     - cf_export VERSION=$(cat VERSION)
     - echo $GOOGLE_SERVICE_ACCOUNT_B64 | base64 -D - > ${{CF_VOLUME_PATH}}/service-account.json
     - cf_export KEY_FILE_PATH=${{CF_VOLUME_PATH}}/service-account.json
-
-  CreatingGitTag:
-    title: Push tag to git
-    image: codefresh/cli
-    working_directory: ${{CloneServices}}    
-    commands:
-    - git remote rm origin
-    - git remote add origin https://olegsu:${{GITHUB_TOKEN}}@github.com/olegsu/openc-services.git
-    - git tag ${{VERSION}}
-    - git push --tags
-    fail_fast: false
-    when:
-      branch:
-        only:
-        - master
 
   CreateRelease:
     title: Create Release
