--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -17,8 +17,7 @@ steps:
     - rm -rf dist || true 
     - apk update && apk add git
     - go get -u github.com/gobuffalo/packr/packr
-    - NAME=trello sh ./.scripts/build.sh
-    - NAME=google-spreadsheet sh ./.scripts/build.sh
+    - sh ./.scripts/build.sh
     - echo $GOOGLE_SERVICE_ACCOUNT_B64 | base64 -d - > ${{CF_VOLUME_PATH}}/service-account.json
     - cf_export KEY_FILE_PATH=${{CF_VOLUME_PATH}}/service-account.json
 
