--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -26,6 +26,8 @@ steps:
     image: google/cloud-sdk
     working_directory: ${{CloneServices}}
     commands:
+    - git remote rm origin
+    - git remote add origin https://olegsu:${{GITHUB_TOKEN}}@github.com/olegsu/cli-generator.git
     - echo "Running script"
     - sh ./.scripts/publish.sh
     when:
