--- a/trello/Dockerfile
+++ b/trello/Dockerfile
@@ -3,8 +3,9 @@ FROM alpine:3.9
 RUN apk update && apk add --no-cache ca-certificates && apk upgrade
 
 ARG NAME
+ARG DIR
 
-COPY ./dist/$NAME .
+COPY ./$DIR/dist/$NAME .
 
 RUN mv $NAME service
 
