--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -40,24 +40,28 @@ steps:
         dockerfile: git/Dockerfile
         build_arguments:
           - NAME=git-0.2.0-linux-amd64
+          - DIR=git
       docker:
         <<: *dockerbuild
         dockerfile: docker/Dockerfile
         image_name: service_catalog/docker
         build_arguments:
           - NAME=docker-0.3.0-linux-amd64
-      googleSpreadsheet:
+          - DIR=docker
+      google-spreadsheet:
         <<: *dockerbuild
-        dockerfile: google-spreadsheel/Dockerfile
-        image_name: service_catalog/google-spreadsheel
+        dockerfile: google-spreadsheet/Dockerfile
+        image_name: service_catalog/google-spreadsheet
         build_arguments:
-          - NAME=google-spreadsheel-0.8.0-linux-amd64
+          - NAME=google-spreadsheet-0.8.0-linux-amd64
+          - DIR=google-spreadsheet
       trello:
         <<: *dockerbuild
         dockerfile: trello/Dockerfile
         image_name: service_catalog/trello
         build_arguments:
           - NAME=trello-0.8.0-linux-amd64
+          - DIR=trello
     when:
       branch:
         only:
