--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,9 @@ FROM alpine:3.9
 RUN apk update && apk add --no-cache ca-certificates && apk upgrade
 
 ARG NAME
+ARG DIR
+
+RUN ls
 
 COPY ./$DIR/dist/$NAME .
 
