--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine:3.9
 RUN apk update && apk add --no-cache ca-certificates && apk upgrade
 
 ARG NAME
+ARG DIR
 
 COPY ./$DIR/dist/$NAME .
 
