--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -32,6 +32,7 @@ steps:
     - cf_export SERVICE_GOOGLE_SPREADSHEET_VERSION=$(cat google-spreadsheet/VERSION)
     - cf_export SERVICE_TRELLO_VERSION=$(cat trello/VERSION)
     - cf_export SERVICE_JIRA_VERSION=$(cat jira/VERSION)
+    - cf_export SERVICE_SLACK_VERSION=$(cat jira/VERSION)
 
   BuildImages:
     stage: Build
@@ -54,6 +55,13 @@ steps:
         build_arguments:
           - NAME=docker-${{SERVICE_DOCKER_VERSION}}-linux-amd64
           - DIR=docker
+      slack:
+        <<: *dockerbuild
+        dockerfile: docker/Dockerfile
+        image_name: service_catalog/slack
+        build_arguments:
+          - NAME=slack-${{SERVICE_SLACK_VERSION}}-linux-amd64
+          - DIR=slack
       jira:
         <<: *dockerbuild
         dockerfile: docker/Dockerfile
@@ -101,6 +109,13 @@ steps:
         tags:
         - latest
         - ${{SERVICE_JIRA_VERSION}}
+      push-slack:
+        <<: *pushImage
+        candidate: ${{jira}}
+        image_name: openintegration/service_catalog-slack
+        tags:
+        - latest
+        - ${{SERVICE_SLACK_VERSION}}
       push-docker:
         <<: *pushImage
         candidate: ${{docker}}
